# LoopOS

./: .gitignore  ADAPTIVE_LR_GUIDE.md  ADAPTIVE_TOKENIZER_AND_SERIALIZATION_PLAN.md  ARCHITECTURE.md  AUTOENCODER_TOKENIZER_IMPLEMENTATION_PLAN.md  BUILD_SYSTEM_SUMMARY.md  CLI.MD  CLI_EXAMPLES.md  CMakeLists.txt  COMPLETE_OPTIMIZATION_SUMMARY.md  COMPREHENSIVE_PROFILING_SUMMARY.md  CUDA_QUICKSTART.md  DATA_PIPELINE_ANALYSIS.md  FEATURE_IMPLEMENTATION_PROGRESS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INSTALLATION.md  OPENMP_BACKPROP_SUMMARY.md  OPTIMIZATIONS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZED_TRANSFORMER.md  POST_TRAINING_ENHANCEMENTS_COMPLETE.md  PROFILING_ENABLED_SUMMARY.md  PROFILING_SUMMARY.md  PROGRESS_BAR_FIX.md  QUICKSTART.md  RANDOM_OFFSET_FEATURE.md  README.md  RESUME_TRAINING_GUIDE.md  SEQUENTIAL_LOADER_UPDATE.md  SYSTEM_INTEGRATION_WIRING.md  TEST_PROFILING.md  TRANSFORMER_REWRITE_SUMMARY.md  USAGE_GUIDE.md  loop  test_forward.cpp  test_opencl.cpp
_codeql_build_dir/: cli_tests
build_avx2/: build_tokenizer  chat_bot  model_test
configs/: README.md  autoencoder_tokenizer_config.json  autoregressive_fast.json  autoregressive_quarter.json  autoregressive_random_offset.json  autoregressive_subset.json  autoregressive_tiny.json  autoregressive_training.json  autoregressive_training_small.json  chain_of_thought.json  chat_config.json  contrastive_training.json  fine_tuning.json  masked_lm_training.json  rlhf_training.json  streaming_test.json  streaming_test_backup.json  tokenizer_config.json  tokenizer_wiki_config.json  wiki_cache_optimized.json  wiki_gpu_optimized.json  wiki_performance_tuned.json  wiki_pretraining.json  wiki_test.json
data/: chat_examples.json  fine_tuning_examples.jsonl
data/pretraining/: README.md  sample.txt
docs/: ADAPTIVE_LEARNING_RATE.md  ASYNC_DATALOADER.md  AUTOENCODER_TOKENIZER_DESIGN.md  AUTOENCODER_TOKENIZER_QUICKSTART.md  AUTOENCODER_TOKENIZER_SUMMARY.md  AUTOREGRESSIVE_OPTIMIZATIONS.md  BATCHED_TRAINING_OPTIMIZATION.md  CHATBOT_IMPLEMENTATION_REPORT.md  CHATBOT_QUICKSTART.md  CHATBOT_ROADMAP.md  CONSOLE_UPDATES_SUMMARY.md  CUDA_TRAINING.md  DATA_LOADING_OPTIMIZATION.md  DYNAMIC_CONSOLE_DISPLAY.md  GENERATION_WORKFLOW.md  GPU_ACCELERATION.md  INTERACTIVE_CLI_DESIGN.md  MATRIX_OPERATIONS_REDUCTION.md  NAN_LOSS_INVESTIGATION.md  OPTIMIZATIONS.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  POST_TRAINING_DATA_FORMATS.md  POST_TRAINING_GUIDE.md  POST_TRAINING_QUICKSTART.md  PROFILER_QUICK_REF.md  PROFILING_GUIDE.md  RANDOM_OFFSET_OPTIMIZATION.md  README.md  SHUFFLE_VS_RANDOM_OFFSET.md  TESTING_AND_CHECKPOINTING_QUICK_REF.md  TEST_GENERATION.md  TOKENIZER_PERFORMANCE_IMPROVEMENTS.md  TOKENIZER_TESTING_AND_CHECKPOINTING.md  TRAINING_SPEED_ANALYSIS.md  WIKI_TOKENIZER_TRAINING.md  WIKI_TRAINING_GUIDE.md
docs/archive/: ADAPTIVE_LR_IMPLEMENTATION_COMPLETE.md  ADAPTIVE_LR_IMPLEMENTATION_SUMMARY.md  BACKPROP_IMPLEMENTATION.md  CHANGES_SUMMARY.md  CUDA_IMPLEMENTATION_SUMMARY.md  DAYS_3_4_SUMMARY.md  FEEDFORWARD_BACKPROP_PLAN.md  FULL_BACKPROP_COMPLETE.md  GPU_IMPLEMENTATION_COMPLETE.md  GPU_MEMORY_OPTIMIZATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_CLI_SUMMARY.md  MODULE_WIRING_REVIEW.md  OPTIMIZATION_COMPARISON.md  PERFORMANCE_OPTIMIZATION_PLAN.md  POST_TRAINING_IMPLEMENTATION_SUMMARY.md  REFACTORING_SUMMARY.md  TEST_MODEL_SUMMARY.md  WEEK1_COMPLETE.md  WEEK1_PROGRESS_SUMMARY.md
docs/implementation-plans/: MODEL_LOADER_AND_OPTIMIZATION_PLAN.md
examples/: README.md  hardware_demo.cpp  matrix_demo.cpp
include/chat/: chat_interface.hpp  conversation.hpp
include/cli/: interactive_cli.hpp
include/config/: configuration.hpp
include/executor/: computation_executor.hpp
include/hardware/: cpu_detector.hpp  gpu_detector.hpp  memory_detector.hpp
include/math/: autograd.hpp  cpu_matrix.hpp  cuda_matrix.hpp  matrix_interface.hpp  opencl_matrix.hpp  optimized_cpu_matrix.hpp  parameter.hpp
include/posttraining/: chain_of_thought.hpp  fine_tuning.hpp  reinforcement.hpp
include/pretraining/: autoregressive.hpp  contrastive.hpp  masked_lm.hpp
include/transformer/: attention.hpp  feedforward.hpp  layer_norm.hpp  optimized_attention.hpp  optimized_feedforward.hpp  optimized_transformer.hpp  transformer.hpp
include/utils/: aligned_allocator.hpp  benchmark.hpp  cpu_features.hpp  data_loader.hpp  hyperparameter_search.hpp  logger.hpp  lr_scheduler.hpp  memory_manager.hpp  metrics.hpp  model_loader.hpp  optimizer.hpp  post_training_dataset.hpp  profiler.hpp  progress_bar.hpp  sampling.hpp  serialization.hpp  streaming_data_loader.hpp  streaming_loader_autotune.hpp  system_info.hpp  thread_pool.hpp  tokenizer.hpp
logs/tokenizer/: wiki_training_stats.json
scripts/: BUILD_SCRIPTS_README.md  TRAINING_SCRIPTS.md  build.sh  build_avx2.sh  build_avx512.sh  build_cuda.sh  build_unified.sh  build_vocab.sh  clean.sh  continue_wiki_training.sh  demo_cli.sh  flatten_wiki_corpus.sh  generate.sh  install_dependencies.sh  install_wsl.sh  make_wiki_corpus.sh  quarter_dataset.py  quick_continue_wiki.sh  resume_wiki.sh  review_modules.sh  run.sh  run_all_tests.sh  run_cli.sh  run_hardware_demo.sh  run_matrix_demo.sh  run_profiling_test.sh  train_wiki.sh  train_wiki_cuda.sh  train_wiki_subdir.sh  train_wiki_tokenizer.sh  train_with_vocab.sh
src/: build_tokenizer.cpp  chat_main.cpp  cli_main.cpp  interactive_cli_main.cpp  lr_scheduler_demo.cpp  main.cpp  model_test.cpp  train_vocab.cpp
src/chat/: chat_interface.cpp  conversation.cpp
src/cli/: interactive_cli.cpp
src/config/: configuration.cpp
src/executor/: computation_executor.cpp
src/hardware/: cpu_detector.cpp  gpu_detector.cpp  memory_detector.cpp
src/math/: autograd.cpp  cpu_matrix.cpp  cuda_kernels.cu  cuda_matrix.cpp  opencl_kernels.cl.hpp  opencl_matrix.cpp  optimized_cpu_matrix.cpp  parameter.cpp
src/posttraining/: chain_of_thought.cpp  fine_tuning.cpp  reinforcement.cpp
tests/: basic_tests.cpp  cli_tests.cpp
wsl-setup/: README.md  install.sh
(+49 files in other folders)
